--- a/spec/runtime/languages/javascript/errors.txt
+++ b/spec/runtime/languages/javascript/errors.txt
@@ -7,7 +7,7 @@ stuff(|||);
 ---
 
 (program
-  (expression_statement (function_call (identifier) (ERROR (UNEXPECTED '|')))))
+  (expression_statement (function_call (identifier) (arguments (ERROR (UNEXPECTED '|'))))))
 
 ==========================================
 errors in if statements
@@ -22,9 +22,9 @@ moreStuff();
 ---
 
 (program
-  (expression_statement (function_call (identifier)))
+  (expression_statement (function_call (identifier) (arguments)))
   (if_statement
     (ERROR (UNEXPECTED '*') (identifier))
     (statement_block
       (expression_statement (ERROR (UNEXPECTED '*') (identifier) (identifier)))))
-  (expression_statement (function_call (identifier))))
+  (expression_statement (function_call (identifier) (arguments))))
